--- a/src/view/layouts/main.fxml
+++ b/src/view/layouts/main.fxml
@@ -18,17 +18,12 @@
    <children>
       <Pane fx:id="mainPane" layoutX="252.0" prefHeight="626.0" prefWidth="730.0" style="-fx-background-color: #252529;" stylesheets="@../../resources/css/style.css">
          <children>
-            <ImageView fitHeight="738.0" fitWidth="1005.0" layoutY="-73.0" opacity="0.15" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../resources/icons/a.jpg" />
-               </image>
-            </ImageView>
             <ImageView fitHeight="714.0" fitWidth="1051.0" layoutX="-180.0" layoutY="-51.0" opacity="0.49" pickOnBounds="true">
                <image>
                   <Image url="@../../resources/icons/neck.png" />
                </image>
             </ImageView>
-            <Label layoutX="59.0" layoutY="14.0" prefHeight="48.0" prefWidth="212.0" text="COVID-19" textFill="#6232ab">
+            <Label layoutX="59.0" layoutY="14.0" prefHeight="48.0" prefWidth="212.0" text="COVID-19" textFill="#8e67cd">
                <font>
                   <Font name="Bodoni MT" size="46.0" />
                </font>
@@ -133,27 +128,40 @@
                   <Font name="Gill Sans MT" size="16.0" />
                </font>
             </Label>
-            <JFXButton id="button" layoutX="421.0" layoutY="148.0" prefHeight="46.0" prefWidth="123.0" stylesheets="@../../resources/css/style.css" text="Learn More" />
-            <JFXButton id="radius" layoutX="572.0" layoutY="148.0" minWidth="47.0" prefHeight="46.0" prefWidth="47.0" stylesheets="@../../resources/css/style.css" text="  " />
-            <FontAwesomeIcon fill="WHITE" glyphName="PLAY" layoutX="593.0" layoutY="176.0" text="" />
+            <JFXButton id="button" fx:id="btnLearnMore" layoutX="443.0" layoutY="128.0" prefHeight="53.0" prefWidth="181.0" stylesheets="@../../resources/css/style.css" text="Learn More" />
          </children></Pane>
       <VBox id="vbox" prefHeight="626.0" prefWidth="256.0" style="-fx-background-color: #252529;" stylesheets="@../../resources/css/style.css">
          <children>
-            <Pane prefHeight="180.0" prefWidth="242.0">
+            <Pane prefHeight="151.0" prefWidth="242.0">
                <children>
-                  <ImageView fitHeight="74.0" fitWidth="69.0" layoutX="14.0" layoutY="56.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="74.0" fitWidth="69.0" layoutX="17.0" layoutY="36.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../../resources/icons/icons8-seringa-96.png" />
                      </image>
                   </ImageView>
-                  <Label contentDisplay="CENTER" layoutX="83.0" layoutY="70.0" prefHeight="35.0" prefWidth="140.0" text="Covid Vaccine" textFill="WHITE">
+                  <Label contentDisplay="CENTER" layoutX="86.0" layoutY="50.0" prefHeight="35.0" prefWidth="140.0" text="Covid Vaccine" textFill="WHITE">
                      <font>
                         <Font name="Dubai Medium" size="23.0" />
                      </font>
                   </Label>
                </children>
             </Pane>
-            <JFXButton id="menuButton" fx:id="btnRegisterPatient" alignment="BASELINE_LEFT" graphicTextGap="10.0" layoutX="10.0" layoutY="10.0" onAction="#loadCreatePatient" prefHeight="65.0" prefWidth="242.0" stylesheets="@../../resources/css/style.css" text="Register patient consult" textFill="WHITE">
+            <JFXButton id="menuButton" fx:id="btnRegisterPatient1" alignment="BASELINE_LEFT" graphicTextGap="10.0" onAction="#loadCreatePatient" prefHeight="65.0" prefWidth="242.0" stylesheets="@../../resources/css/style.css" text="Home" textFill="WHITE">
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+               <graphic>
+                  <FontAwesomeIcon fill="#8f5fd7" glyphName="HOME" selectionFill="#3044c6" size="20" />
+               </graphic>
+               <font>
+                  <Font name="MS Outlook" size="13.0" />
+               </font>
+               <effect>
+                  <Reflection />
+               </effect>
+            </JFXButton>
+            <Pane prefHeight="31.0" prefWidth="242.0" />
+            <JFXButton id="menuButton" fx:id="btnRegisterPatient" alignment="BASELINE_LEFT" graphicTextGap="10.0" layoutX="10.0" layoutY="10.0" onAction="#loadCreatePatient" prefHeight="65.0" prefWidth="242.0" stylesheets="@../../resources/css/style.css" text="Register Appointment" textFill="WHITE">
                <padding>
                   <Insets left="50.0" />
                </padding>
@@ -167,8 +175,8 @@
                   <Reflection />
                </effect>
             </JFXButton>
-            <Pane prefHeight="54.0" prefWidth="242.0" />
-            <JFXButton id="menuButton" fx:id="btnUpdatePatient" alignment="BASELINE_LEFT" graphicTextGap="10.0" layoutX="10.0" layoutY="10.0" onAction="#loadUpdatePatient" prefHeight="65.0" prefWidth="242.0" stylesheets="@../../resources/css/style.css" text="Update patient consult" textFill="WHITE">
+            <Pane prefHeight="31.0" prefWidth="242.0" />
+            <JFXButton id="menuButton" fx:id="btnUpdatePatient" alignment="BASELINE_LEFT" graphicTextGap="10.0" layoutX="10.0" layoutY="10.0" onAction="#loadUpdatePatient" prefHeight="65.0" prefWidth="242.0" stylesheets="@../../resources/css/style.css" text="Change Appointment" textFill="WHITE">
                <padding>
                   <Insets left="50.0" />
                </padding>
@@ -179,20 +187,20 @@
                   <Font name="MS Outlook" size="13.0" />
                </font>
             </JFXButton>
-            <Pane prefHeight="263.0" prefWidth="242.0">
+            <Pane prefHeight="222.0" prefWidth="242.0">
                <children>
-                  <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="46.0" layoutY="49.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="46.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../../resources/icons/mask.png" />
                      </image>
                   </ImageView>
-                  <ImageView fitHeight="216.0" fitWidth="290.0" layoutX="3.0" layoutY="18.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="216.0" fitWidth="290.0" layoutX="3.0" layoutY="-3.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../../resources/icons/border.png" />
                      </image>
                   </ImageView>
                </children></Pane>
-            <JFXButton id="menuButton" fx:id="btn" alignment="BASELINE_LEFT" graphicTextGap="10.0" prefHeight="60.0" prefWidth="242.0" stylesheets="@../../resources/css/style.css" text="About Software" textFill="WHITE">
+            <JFXButton id="menuButton" fx:id="btnAbout" alignment="BASELINE_LEFT" graphicTextGap="10.0" prefHeight="60.0" prefWidth="242.0" stylesheets="@../../resources/css/style.css" text="About Software" textFill="WHITE">
                <padding>
                   <Insets left="50.0" right="50.0" />
                </padding>
