--- a/src/view/layouts/updatePatient.fxml
+++ b/src/view/layouts/updatePatient.fxml
@@ -50,7 +50,7 @@
                   <FontAwesomeIcon fill="WHITE" glyphName="SEARCH" />
                </graphic>
             </JFXButton>
-            <JFXButton id="button" fx:id="btnNext1" layoutX="230.0" layoutY="561.0" prefHeight="42.0" prefWidth="82.0" stylesheets="@../../resources/css/style.css" text="Back">
+            <JFXButton id="button" fx:id="btnBack" layoutX="230.0" layoutY="561.0" prefHeight="42.0" prefWidth="82.0" stylesheets="@../../resources/css/style.css" text="Back">
                <effect>
                   <Reflection />
                </effect>
