--- a/src/view/layouts/createPatient.fxml
+++ b/src/view/layouts/createPatient.fxml
@@ -8,6 +8,8 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.ColorAdjust?>
 <?import javafx.scene.effect.Reflection?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -19,7 +21,7 @@
    <children>
       <Pane id="test" fx:id="createPane" prefHeight="626.0" prefWidth="730.0" style="-fx-background-color: #252529;">
          <children>
-            <JFXButton id="button" fx:id="btnSave" layoutX="234.0" layoutY="524.0" prefHeight="42.0" prefWidth="84.0" stylesheets="@../../resources/css/style.css" text="Save" textFill="WHITE">
+            <JFXButton id="button" fx:id="btnSave" layoutX="434.0" layoutY="524.0" prefHeight="42.0" prefWidth="84.0" stylesheets="@../../resources/css/style.css" text="Save" textFill="WHITE">
                <effect>
                   <Reflection />
                </effect>
@@ -29,7 +31,7 @@
                <font>
                   <Font size="13.0" />
                </font></JFXButton>
-            <JFXButton id="button" fx:id="btnCancel" layoutX="419.0" layoutY="524.0" prefHeight="42.0" prefWidth="84.0" stylesheets="@../../resources/css/style.css" text="Cancel">
+            <JFXButton id="button" fx:id="btnCancel" layoutX="192.0" layoutY="524.0" prefHeight="42.0" prefWidth="84.0" stylesheets="@../../resources/css/style.css" text="Cancel">
                <effect>
                   <Reflection />
                </effect>
@@ -44,6 +46,11 @@
                   <Font name="Rockwell" size="26.0" />
                </font>
             </Label>
+            <ImageView fitHeight="363.0" fitWidth="807.0" layoutX="-73.0" layoutY="119.0" opacity="0.45" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../resources/icons/purple.png" />
+               </image>
+            </ImageView>
             <GridPane layoutX="207.0" layoutY="108.0" prefHeight="378.0" prefWidth="338.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
