--- a/src/view/layouts/updatePatient.fxml
+++ b/src/view/layouts/updatePatient.fxml
@@ -13,25 +13,12 @@
 
 <AnchorPane fx:id="updateAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="626.0" prefWidth="730.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.UpdateController">
    <children>
-      <Pane layoutX="265.0" layoutY="213.0" prefHeight="626.0" prefWidth="730.0" style="-fx-background-color: #252529;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <Pane fx:id="updatePane" layoutX="265.0" layoutY="213.0" prefHeight="626.0" prefWidth="730.0" style="-fx-background-color: #252529;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label layoutX="250.0" layoutY="30.0" prefHeight="42.0" prefWidth="299.0" text="Search  appointment" textFill="WHITE">
                <font>
                   <Font name="Rockwell" size="29.0" />
                </font></Label>
-            <TableView fx:id="tableView" layoutX="14.0" layoutY="168.0" prefHeight="363.0" prefWidth="704.0" stylesheets="@../../resources/css/style.css">
-              <columns>
-                <TableColumn fx:id="clID" prefWidth="50.0" text="ID" />
-                <TableColumn fx:id="clPatientName" prefWidth="66.0" text="Patient Name" />
-                  <TableColumn fx:id="clGender" prefWidth="123.0" text="Gender" />
-                  <TableColumn fx:id="clAge" prefWidth="63.0" text="Age" />
-                  <TableColumn fx:id="clWeight" minWidth="0.0" prefWidth="169.0" text="Weight" />
-                  <TableColumn fx:id="clVaccineDate" minWidth="0.0" prefWidth="237.0" text="Vaccine Date" />
-              </columns>
-               <columnResizePolicy>
-                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-               </columnResizePolicy>
-            </TableView>
             <JFXButton id="button" fx:id="btnNext" layoutX="430.0" layoutY="561.0" prefHeight="42.0" prefWidth="82.0" stylesheets="@../../resources/css/style.css" text="Next">
                <effect>
                   <Reflection />
@@ -58,6 +45,19 @@
                   <FontAwesomeIcon fill="WHITE" glyphName="ARROW_LEFT" size="14" />
                </graphic>
             </JFXButton>
+            <TableView fx:id="tableView" layoutX="14.0" layoutY="168.0" prefHeight="363.0" prefWidth="704.0" stylesheets="@../../resources/css/style.css">
+              <columns>
+                <TableColumn fx:id="clID" prefWidth="50.0" text="ID" />
+                <TableColumn fx:id="clPatientName" prefWidth="66.0" text="Patient Name" />
+                  <TableColumn fx:id="clGender" prefWidth="123.0" text="Gender" />
+                  <TableColumn fx:id="clAge" prefWidth="63.0" text="Age" />
+                  <TableColumn fx:id="clWeight" minWidth="0.0" prefWidth="169.0" text="Weight" />
+                  <TableColumn fx:id="clVaccineDate" minWidth="0.0" prefWidth="237.0" text="Vaccine Date" />
+              </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
+            </TableView>
          </children></Pane>
    </children>
 </AnchorPane>
